--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.22",
+    "@heroicons/vue": "^2.1.5",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
