--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.5",
+    "@vueuse/motion": "^2.2.3",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
